Fixed possible error in toml file

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,4 +5,5 @@
   publish = "public"
 
   # Default build command.
-  command = "npm run build" 
+  # command = "npm run build" 
+  CI = "npm run build" 
